[gd_scene load_steps=5 format=3 uid="uid://1kt3777oxrdh"]

[ext_resource type="Texture2D" uid="uid://d6yyhkv3i3o6" path="res://assets/sheets/16x16_spritesheet.png" id="1_v536y"]
[ext_resource type="Script" uid="uid://4bq38lvemigx" path="res://menu/upgrades/upgrade_card.gd" id="2_hdb6e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1d55w"]
atlas = ExtResource("1_v536y")
region = Rect2(80, 48, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kvi5"]
atlas = ExtResource("1_v536y")
region = Rect2(80, 400, 16, 16)

[node name="UpgradeCard" type="NinePatchRect"]
texture_filter = 1
custom_minimum_size = Vector2(120, 140)
mouse_filter = 0
texture = SubResource("AtlasTexture_1d55w")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 22
patch_margin_bottom = 22
script = ExtResource("2_hdb6e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"TitleRichTextLabel"
bbcode_enabled = true
text = "[wave]Mejora copada"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_1kvi5")
stretch_mode = 5

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Esto te mejora
el danio, usalo"
fit_content = true

[node name="Info" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "damage: [color=red]20[/color]
damage: [color=green]25"
fit_content = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
